storage/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.lan.e-dani.com`) && (ClientIP(`192.168.50.0/24`) || ClientIP(`100.64.0.0/10`))
      priority: 300
      services:
        - name: longhorn-frontend
          port: 80
    - kind: Rule
      match: Host(`longhorn.lan.e-dani.com`)
      priority: 100
      middlewares:
        - name: sso-chain
          namespace: keycloak
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: wildcard-lan-tls
